<resources>
    <string name="app_name">Smart Home Manager</string>
    <string name="title_home">Устройства</string>
    <string name="title_settings">Настройки</string>
    <string name="title_add_device">устройство</string>
    <string name="title_device_details">Настройки устройства</string>

    <string name="hint_device_name">Название</string>
    <string name="hint_device_room">Комната</string>
    <string name="hint_ac_temp">Температура (°C)</string>

    <string name="button_save">Сохранить</string>
    <string name="button_cancel">Отмена</string>
    <string name="button_delete">Удалить устройство</string>

    <string name="label_on">ON</string>
    <string name="label_off">OFF</string>
    <string name="label_ac_settings">Настройки кондиционера</string>

    <string name="error_empty_name">Название не может быть пустым</string>
    <string name="confirm_delete">Вы уверены, что хотите удалить это устройство?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="device_added_success">Устройство успешно добавлено</string>
    <string name="pref_dark_mode">Темная тема</string>

    <string name="type_light">Освещение</string>
    <string name="type_ac">Кондиционер</string>
    <string name="type_socket">Умная розетка</string>
    <string name="username_admin">Имя пользователя: admin</string>
    <string name="password_admin">Пароль: admin</string>
    <string name="role_admin">Роль: ADMIN</string>
    <string name="registered_users">Зарегистрированные пользователи</string>
    <string name="username_field">Имя пользователя:</string>
    <string name="role_field">Роль:</string>
    <string name="admin_radio">Администратор</string>
    <string name="user_radio">Пользователь</string>
    <string name="password_hint">Пароль</string>
    <string name="username_hint">Имя пользователя</string>
    <string name="register_button">Зарегистрироваться</string>
    <string name="have_an_account">Уже есть аккаунт? Авторизоваться</string>
    <string name="registration">Регистрация</string>
    <string name="login_button">Авторизоваться</string>
    <string name="no_account">Нет аккаунта? Зарегистрироваться</string>
    <string name="login">Авторизация</string>
    <string name="smart_home">Мой Умный Дом</string>
    <string name="add_device">Добавить устройство</string>
    <string name="temperature">22°C</string>
</resources>
